--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1 projects</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <header>
-
+            <nav>
+                 <ul>
+                    <li><a class="li-a-item" href=""></a>Bangladesh 2.0</li>
+                    <li><a href=""><button class="btn-primary">Sign In</button></a></li>
+                 </ul>
+            </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
