banner section done

--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
             <nav>
                  <ul>
                     <li><a class="li-a-item" href=""></a>Bangladesh 2.0</li>
-                    <li><a href=""><button class="btn-primary">Sign In</button></a></li>
+                    <li><a href=""><button class="btn">Sign In</button></a></li>
                  </ul>
             </nav>
     </header>
     <main>
+        <section class="banner-hero">
+               <div class="banner">
+                <div class="banner-item">
+                    <h4 class="color-1">Bangladesh 2.0</h4>
+                    <p>Idea , innovation ,<br>
+                     vision and challenges in<br> New Bangladesh.</p>
+                     <a class="" href=""><button class="banner-btn ">Explore New Bangladesh</button></a>
+                </div>
+                <img class="img" src="./assets/hero.png" alt="">
+               </div>
+        </section>
+        <section class="pillars">
+               <div class="pillars-container">
 
+               </div>
+        </section>
     </main>
     <footer>
 
