pillars section complect

--- a/index.html
+++ b/index.html
@@ -27,9 +27,31 @@
                 <img class="img" src="./assets/hero.png" alt="">
                </div>
         </section>
-        <section class="pillars">
+        <section id="pillars">
                <div class="pillars-container">
-
+                   <h2>Pillars of "Bangladesh 2.0"</h2>
+                       <div class="pillars-discription">
+                           <div class="pillars-content">
+                               <img src="./assets/card-icon.png" alt="">
+                               <h3>Innovation</h3>
+                               <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore<br> sequi quos </p>
+                           </div>
+                           <div class="pillars-content">
+                               <img src="./assets/card-icon.png" alt="">
+                               <h3>Sustainability</h3>
+                               <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi<br> quos </p>
+                           </div>
+                           <div class="pillars-content">
+                               <img src="./assets/card-icon.png" alt="">
+                               <h3>Infrastructure</h3>
+                               <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi<br> quos </p>
+                           </div>
+                           <div class="pillars-content">
+                               <img src="./assets/card-icon.png" alt="">
+                               <h3>Empowerment</h3>
+                               <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi<br> quos </p>
+                           </div>
+                       </div>
                </div>
         </section>
     </main>
