future section complect

--- a/index.html
+++ b/index.html
@@ -54,6 +54,35 @@
                        </div>
                </div>
         </section>
+        <section>
+              <div id="future">
+                    <div class="future-container">
+                          <h1>The Vision of Future</h1>
+                          <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+                          <div class="future-description">
+                                  <div class="future-content-1">
+                                      <img src="./assets/card-icon.png" alt="">
+                                      <h3>Digital Transformation</h3>
+                                      <P>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</P>
+                                      <a href=""><button class="future-button">Learn More</button></a>
+                                  </div>
+                                  <div class="future-content-2">
+                                       <img src="./assets/card-icon.png" alt="">
+                                       <h3>Green Energy</h3>
+                                       <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                                       <a href=""><button class="future-button">Learn More</button></a>
+                                  </div>
+                                  <div class="future-content-3">
+                                       <img src="./assets/card-icon.png" alt="">
+                                       <h3>Modern Infrastructure</h3>
+                                       <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                                       <a href=""><button class="future-button">Learn More</button></a>
+                                  </div>
+
+                          </div>
+                    </div>
+              </div>
+        </section>
     </main>
     <footer>
 
