--- a/index.html
+++ b/index.html
@@ -83,9 +83,58 @@
                     </div>
               </div>
         </section>
+        <section id="news">
+               <div class="news-container">
+                    <h1>Recent News</h1>
+                    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development</p>
+                    <div class="news-description">
+                        <div class="news-items">
+                            <div class="news-img">
+                                <img src="./assets/satelite.png" alt="">
+                            </div>
+                            <div class="news-content">
+                                <h1>Bangladesh Launches New Satellite</h1>
+                                <img src="./assets/al-jazeera.png" alt="">
+                                <h4>Date: 05/01/2025         Time: 10.25 PM</h4>
+                                <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <a href=""><button class="news-button">Read More</button></a>
+                            </div>
+                        </div>
+                   </div>
+                   <div class="news-description">
+                       <div class="news-items">   
+                             <div class="news-content">
+                                  <h1>Bangladesh Launches New Satellite</h1>
+                                  <img src="./assets/al-jazeera.png" alt="">
+                                  <h4>Date: 05/01/2025         Time: 10.25 PM</h4>
+                                  <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized</p>
+                                 <a href=""><button class="news-button">Read More</button></a>
+                            </div>
+                            <div class="news-img">
+                                <img src="./assets/satelite.png" alt="">
+                            </div>
+                       </div>
+                   </div>
+                   <div class="news-description">
+                    <div class="news-items">
+                        <div class="news-img">
+                            <img src="./assets/satelite.png" alt="">
+                        </div>
+                        <div class="news-content">
+                            <h1>Bangladesh Launches New Satellite</h1>
+                            <img src="./assets/al-jazeera.png" alt="">
+                            <h4>Date: 05/01/2025         Time: 10.25 PM</h4>
+                            <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <a href=""><button class="news-button">Read More</button></a>
+                        </div>
+                    </div>
+                </div>
+               </div>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
 </html>
+ 
