promise style contuine

--- a/index.html
+++ b/index.html
@@ -131,6 +131,17 @@
                 </div>
                </div>
         </section>
+        <section id="promise">
+              <div class="promise-container">
+                   <h1>Subscribe Newsletter</h1>
+                   <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br>technology, promoting inclusive growth.</p>
+                   <div class="promise-content">
+                         <input type="email" name="" id="" placeholder="Enter your email here">
+                         <button class="promise-btn">Subscribe</button>
+                   </div>
+                   <h4>We promise not to spam you!</h4>
+              </div>            
+        </section>
     </main>
     <footer>
 
