donate style done

--- a/index.html
+++ b/index.html
@@ -131,6 +131,24 @@
                 </div>
                </div>
         </section>
+        <section id="donate">
+              <div class="donate-container">
+                  <h1>Donate Today</h1>
+                  <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability.<br> With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+                  <div class="donate-items">
+                      <ul>
+                           <li><a href="">100 Taka</a></li>
+                           <li><a href="">200 Taka</a></li>
+                           <li><a href="">500 Taka</a></li>
+                           <li><a href="">1000 Taka</a></li>
+                      </ul>
+                  </div>
+                  <div class="donate-items-2">
+                    <input type="text" name="" id="" placeholder="Other Amount (Taka)"  class="donate-input"><br>
+                    <button class="donate-btn">Done Now</button>
+                  </div>
+              </div>
+        </section>
         <section id="promise">
               <div class="promise-container">
                    <h1>Subscribe Newsletter</h1>
