icon style done

--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
                     </div>
               </div>
         </section>
+        <section class="testimonial">
+                <div class="icon">
+                      <div class="icon-symbol">“</div>
+                      <div class="icon-item">
+                        <p>
+                        Professor Muhammad Yunus established the Grameen Bank in Bangladesh in 1983, fueled by the belief that credit is a fundamental human right. His objective was to help poor people escape from poverty by providing loans on terms suitable to them and by teaching them a few sound financial principles so they could help themselves. From Dr. Yunus’ personal loan of small amounts of money to destitute basketweavers in Bangladesh in the mid-70s, the Grameen Bank has advanced to the forefront of a burgeoning world movement toward eradicating poverty through microlending. Replicas of the Grameen Bank model operate in more than 100 countries worldwide..</p>
+                      </div>
+                      <div class="sir">
+                          <h3><strong>Dr. Muhammad Yunus</strong></h3>
+                           <p>Chief Adviser of the People's Republic of Bangladesh</p>
+                      </div>
+                </div>
+        </section>
         <section id="news">
                <div class="news-container">
                     <h1>Recent News</h1>
