--- a/index.html
+++ b/index.html
@@ -96,6 +96,47 @@
                       </div>
                 </div>
         </section>
+        <section id="table-info">
+            <h1>Your Opinion Matters</h1>
+            <div class="table">
+                <div class="table-items">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Questions</th>
+                                <th>Select Your Opinion</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                                <td>
+                                    <select name="" id="" class="select-option">
+                                        <option value="">Yes, I Agree</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                                <td>
+                                    <select name="" id="" class="select-option">
+                                        <option value="">Yes, I Agree</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                                <td>
+                                    <select name="" id="" class="select-option">
+                                        <option value="">Yes, I Agree</option>
+                                    </select>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
         <section id="news">
                <div class="news-container">
                     <h1>Recent News</h1>
@@ -175,7 +216,16 @@
         </section>
     </main>
     <footer>
-
+          <section id="footer-item">
+            <div class="icon-footer">
+                <h1>Bangladesh 2.0</h1>
+            </div>
+            <div class="icon-icon">
+                <a href=""><img src="./assets/facebook.png" alt=""></a>
+                <a href=""><img src="./assets/instagram.png" alt=""></a>
+                <a href=""><img src="./assets/x.png" alt=""></a>
+            </div>
+          </section>
     </footer>
 </body>
 </html>
