website last done

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               </div>            
         </section>
     </main>
-    <!-- <footer>
+    <footer>
           <section id="footer-item">
             <div class="icon-footer">
                 <h1>Bangladesh 2.0</h1>
@@ -226,7 +226,7 @@
                 <a href=""><img src="./assets/x.png" alt=""></a>
             </div>
           </section>
-    </footer> -->
+    </footer>
 </body>
 </html>
  
